apps/bitwarden/030-network.yaml
###############################
# Service
###############################
---
apiVersion: v1
kind: Service
metadata:
  name: bitwarden
  namespace: bitwarden
spec:
  ports:
    - name: web
      port: 81
      targetPort: web
  selector:
    app: bitwarden
    task: bitwarden

---
###################################################
# Ingress
###################################################
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: bitwarden
  namespace: bitwarden
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - cloud.tnils.eu
      secretName: tls-bitwarden
  rules:
    - host: cloud.tnils.eu
      http:
        paths:
          - path: /bitwarden
            pathType: Prefix
            backend:
              service:
                name: bitwarden
                port:
                  name: web
